--- a/Arvores.cbp
+++ b/Arvores.cbp
@@ -54,6 +54,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="manipulaString.h" />
+		<Unit filename="operacoes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="operacoes.h" />
 		<Unit filename="struct.h" />
 		<Extensions>
 			<code_completion />
